# SpiNNGym

./: .gitignore  .pylintrc  .ratexcludes  .travis.yml  CITATION.cff  LICENSE  LICENSE_POLICY.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: add_prs_to_project.yml  c_actions.yml  python_actions.yml
c_code/: Makefile  make_all.sh
c_code/breakout/: Makefile  compile.sh
c_code/breakout/src/: bkout.c  bkout_test.c
c_code/double_inverted_pendulum/: Makefile
c_code/double_inverted_pendulum/src/: double_inverted_pendulum.c
c_code/icub_vor_env/: Makefile
c_code/inverted_pendulum/: Makefile
c_code/logic/: Makefile
c_code/multi_arm_bandit/: Makefile
c_code/store_recall/: Makefile  store_recall.c
examples/breakout/: Automated.ipynb  Breakout.ipynb  Neuromodulated.ipynb  automated.py  automated_bkout_play.py  automated_breakout.py  ball_following.py  breakout_sim.py  breakout_simple_connection.py  connections.json  connections_1_paddle_not_spiking_cont.json  helpers.py  jupyter_example.py  neuromodulated_bkout_play.py  plot_weights.py  simple_connection.py  simple_connection_2.py  spynnaker.cfg  util.py  visualiser.py
examples/double_inverted_pendulum/: double_inverted_pendulum_test.py  spynnaker.cfg  test.py
examples/graphs/: after.json  before.json  graphs-test.py  weight-change-graph.py
examples/icub_vor_env/: __init__.py  icub_utilities.py  icub_vor_env_test.py  icub_vor_env_test_200_inputs.py  icub_vor_venv_test_perfect_motion.py  spynnaker.cfg
examples/inverted_pendulum/: inverted_pendulum_eprop.py  inverted_pendulum_test.py  spynnaker.cfg  test.py
examples/logic/: __init__.py  logic_test.py  spynnaker.cfg  test.py
examples/multi_arm_bandit/: bandit_test.py  spynnaker.cfg  test.py
examples/store_recall/: spynnaker.cfg  store_recall_test.py  test.py
integration_tests/: __init__.py  script_builder.py  test_scripts.py
spinn_gym/: __init__.py  _version.py
spinn_gym/games/: __init__.py  spinn_gym_application_vertex.py  spinn_gym_machine_vertex.py
spinn_gym/model_binaries/: .gitignore  __init__.py  bandit.aplx  bandit.dict  breakout.aplx  breakout.dict
unittests/: test_cfg_checker.py  test_import_all.py
(+65 files in other folders)
