# Copyright (c) 2023 The University of Manchester
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = SpiNNGym
version = attr: spinn_gym._version.__version__
description="SpiNNaker Gym for reinforcement learning with SNNs"
# long_description = file: README.md
# long_description_content_type = text/markdown
url="https://github.com/SpiNNakerManchester/SpiNNGym"
license = GPL-3.0-or-later
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
maintainer="SpiNNakerTeam"
maintainer_email="spinnakerusers@googlegroups.com"

[options]
python_requires = >=3.8, <4
packages = find:
zip_safe = True
include_package_data = True
install_requires =
        sPyNNaker == 1!7.4.0
        opencv-python

[options.packages.find]
include =
        spinn_gym
        spinn_gym.*

[options.package_data]
* =
        *.aplx
        *.dict

[options.extras_require]
test =
        SpiNNakerTestBase == 1!7.4.0
        # pytest will be brought in by pytest-cov
        pytest-cov
